--- a/TourPlanner.UI/Theme/WindowButtonTheme.xaml
+++ b/TourPlanner.UI/Theme/WindowButtonTheme.xaml
@@ -35,7 +35,7 @@
            TargetType="Button">
         <Style.Triggers>
             <Trigger Property="IsMouseOver" Value="True">
-                <Setter Property="Background" Value="#C74767"/>
+                <Setter Property="Background" Value="#ed5656"/>
             </Trigger>
         </Style.Triggers>
     </Style>
