--- a/TourPlanner.UI/Theme/TabItemTheme.xaml
+++ b/TourPlanner.UI/Theme/TabItemTheme.xaml
@@ -7,7 +7,7 @@
         <Setter Property="FontSize" Value="16"/>
         <Setter Property="FontFamily" Value="/Resources/Fonts/#Montserrat"/>
         <Setter Property="FontWeight" Value="Medium"/>
-        <Setter Property="Padding" Value="10"/>
+        <Setter Property="Padding" Value="20, 10"/>
         <Setter Property="Cursor" Value="Hand"/>
         <Setter Property="Template">
             <Setter.Value>
